--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "gitbuild": "ng build --prod --output-path docs --base-href /wobertidle/"
   },
   "private": true,
   "dependencies": {
