--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@webcomponents/webcomponentsjs": "^2.4.3",
     "country-data": "0.0.31",
     "rxjs": "~6.5.4",
+    "simple-crypto-js": "^2.2.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
